packages/svelte/tests/compiler-errors/samples/runes-invalid-each-mutation/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-each-assignment',
		message: 'Cannot reassign each block argument in runes mode'
	}
});
